# end_eng_unifor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run_pipeline.sh
docs/: Pipeline ETL API.html
dump/docs/: README.md  analise_inicial.md  camadas_gold_silver_bronze.md  fluxograma_diagrama.md  recomentacoes_tecnologias.md  resumo_conceitual.md  roadmap.md  transformacoes_por_camada.md
log/: log.txt
src/dashboard/: Painel_ETL.py
src/python/: 01_ingestao_api.py  02_envio_landingzone_aws.py  03_carga_bronze_aws.py  04_transform_silver_aws.py  05_gera_gold_aws.py
